start btn alignment fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -51,15 +51,15 @@ body {
   color: white;
   cursor: pointer;
   display: inline-block;
-  font-size: 2.2rem;
-  margin: 15rem;
+  font-size: 1.6rem;
+  margin: 30rem;
   min-width: 200px;
   padding: 0.5rem;
   text-transform: uppercase;
   width: auto;
   position: absolute;
   z-index: 100;
-  top: 5rem;
+  top: -10rem;
   left: 0;
   right: 0;
   font-family: "Press Start 2P", system-ui;
